# evolutionFavor

./: README.md  amis.py  environment.yml  fb_model.py  pyproject.toml
src/evolutionfavor/: __init__.py  app.py
